# muzika

./: .gitignore  TODO  build.gradle
app/: .gitignore  build.gradle
app/lib/: CMakeLists.txt
app/lib/src/: CMakeLists.txt  audio.c  audio.h  fmod.cmake  jni_abstract.cpp  jni_abstract.hpp  jni_calls.hpp  jnilib.c  jnilib.cpp  jnilib.h  jnilib.hpp  jnireceiver.h  library.c  library.h  list.c  list.h  log.h  taglib.cmake  tagreader.c  tagreader.h
app/lib/src/cmake/: taglib.cmake
app/src/main/: AndroidManifest.xml
app/src/main/java/org/muzika/: MainActivity.java
app/src/main/java/org/muzika/audio/: AudioPlayer.java  AudioService.java
app/src/main/java/org/muzika/backport/: ArgbEvaluator.java
app/src/main/java/org/muzika/core/: Logger.java
app/src/main/java/org/muzika/filesystem/: MediaScanner.java  MediaScannerFinishedListener.java  TablibReaderInterface.java  TaglibReaderInterface.java  TrackMetadataReader.java
app/src/main/java/org/muzika/model/: Album.java  Artist.java  Library.java  Track.java
app/src/main/java/org/muzika/views/adapters/: TrackArrayAdapter.java
app/src/main/java/org/muzika/views/basic/: BitmapButton.java  SquareBitmapButton.java  SquareButton.java
app/src/main/java/org/muzika/views/fragments/: LibraryFragment.java  NowPlayingFragment.java  PlaylistFragment.java
app/src/main/java/org/muzika/views/pagers/: MasterPager.java  MasterPagerAdapter.java  MasterPagerBackground.java  MasterPagerBackgroundGradient.java  MasterPagerDecoration.java  MasterPagerDrawer.java
app/src/main/res/layout/: activity_main.xml  fragment_library.xml  fragment_now_playing.xml  fragment_playlist.xml  list_item_track.xml  master_pager_decor.xml  view_album_art.xml  view_button_bar.xml  view_seek_bar.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
